--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,9 @@
   },
   "version": "2.0.0",
   "require": {
-    "fluidtypo3/flux": "dev-master",
-    "fluidtypo3/fluidcontent": "dev-master",
-    "fluidtypo3/fluidpages": "dev-master",
-    "fluidtypo3/vhs": "dev-master"
+    "fluidtypo3/flux": "*",
+    "fluidtypo3/fluidcontent": "*",
+    "fluidtypo3/fluidpages": "*",
+    "fluidtypo3/vhs": "*"
   }
 }
